--- a/WiFiAPScanner/app/build.gradle
+++ b/WiFiAPScanner/app/build.gradle
@@ -34,4 +34,5 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation "android.arch.work:work-runtime-ktx:1.0.0-alpha09"
+    compile 'com.android.volley:volley:1.1.1'
 }
